--- a/Heyward_trees.ipynb
+++ b/Heyward_trees.ipynb
@@ -104,21 +104,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "7d725158-2374-440e-a3f2-854e4ea5694e",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'SamPredictor' is not defined",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'segment_anything'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 106\u001b[0m\n\u001b[0;32m    101\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mError in dino_detection:\u001b[39m\u001b[38;5;124m\"\u001b[39m, e)\n\u001b[0;32m    103\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m detections\n\u001b[1;32m--> 106\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msegment\u001b[39m(sam_predictor: \u001b[43mSamPredictor\u001b[49m, image: np\u001b[38;5;241m.\u001b[39mndarray, xyxy: np\u001b[38;5;241m.\u001b[39mndarray) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m np\u001b[38;5;241m.\u001b[39mndarray:\n\u001b[0;32m    107\u001b[0m     sam_predictor\u001b[38;5;241m.\u001b[39mset_image(image)\n\u001b[0;32m    108\u001b[0m     result_masks \u001b[38;5;241m=\u001b[39m []\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'SamPredictor' is not defined"
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mbz2\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msegment_anything\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m SamPredictor\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtime\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mdatetime\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'segment_anything'"
      ]
     }
    ],
@@ -1666,7 +1666,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "street_mapping_env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
